issue: fixed color contrast issues with buttons and text

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -75,7 +75,7 @@
     margin-bottom: 1rem;
   }
   .profile-middle-name {
-    color: #6ea82c;
+    color: #72a329;
     margin-right: 0.25rem;
   }
 
