--- a/src/styles/btn.css
+++ b/src/styles/btn.css
@@ -52,7 +52,7 @@
 }
 .btn-outline {
   padding: 0.75rem 0.95rem;
-  background-color: #a1a5e438;
+  background-color: #383d61;
 
   transition: all 0.5s ease-out;
 }
